added a timer and its working perfectly unless you used the skipBtn twice
the app is almost Done

whats left to be on GoogleStore is the Questions to be reScanned and the coloring if needed and the Layouts for multiScreen and the Portrait and landScape Design
 8:55 pm jun4 2023

--- a/app/src/main/res/layout/fragment_riddle_true.xml
+++ b/app/src/main/res/layout/fragment_riddle_true.xml
@@ -89,5 +89,17 @@
         app:layout_constraintTop_toBottomOf="@id/textView_frg_Q_true"
         tools:ignore="TextContrastCheck" />
 
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/skip_f_act_btn_trueOrFalse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/golden_yellow"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_skip_next"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
