--- a/app/src/main/res/layout/fragment_riddle_choose.xml
+++ b/app/src/main/res/layout/fragment_riddle_choose.xml
@@ -157,9 +157,9 @@
         android:layout_width="0dp"
         android:layout_height="85dp"
 
-        android:backgroundTint="@color/sea_blue"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/sea_blue"
         android:text="@string/submit"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@id/guideScreen_from_bottom"
@@ -168,5 +168,18 @@
         app:layout_constraintStart_toEndOf="@id/guideScreen_from_start"
         app:layout_constraintTop_toBottomOf="@id/radioGroupAnswers" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/skip_f_act_btn_choose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/golden_yellow"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_skip_next"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
