--- a/app/src/main/res/layout/fragment_riddle_complete.xml
+++ b/app/src/main/res/layout/fragment_riddle_complete.xml
@@ -83,4 +83,18 @@
         app:layout_constraintEnd_toStartOf="@id/guideScreen_from_ends"
         app:layout_constraintStart_toEndOf="@id/guideScreen_from_start"
         app:layout_constraintTop_toBottomOf="@id/ed_frag_input" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/skip_f_act_btn_complete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/golden_yellow"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_skip_next"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
