--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/golden_yellow</item>
         <item name="colorSecondaryVariant">@color/old_sky_blue</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/lightestDegree</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/fade_black</item>
         <!-- Customize your theme here. -->
